# meiland

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/jinja/: Cargo.toml
src-tauri/crates/llama/: Cargo.toml
src-tauri/crates/llama/examples/: llama_tool_call.rs  mtmd.rs  nba_stats.rs  simple_server.rs
src-tauri/crates/llama/src/: lib.rs
src-tauri/crates/llama/src/llama/: config.rs  engine.rs  inferencer.rs  metric.rs  mod.rs  runtime.rs  sampler.rs
src-tauri/crates/llama/src/llama/inference/: embedder.rs  engine.rs  inferencer.rs  mod.rs  sampler.rs
src-tauri/crates/llama/src/utils/: jinja.rs  mod.rs
src-tauri/examples/: hello_llama_cpp.rs  llama_tool_call.rs
src-tauri/src/: main.rs
