[package]
name = "llama"
version = "0.1.0"
edition = "2024"

[dependencies]
llama-cpp-2 = { version = "0.1.147", features = ["mtmd"] }
encoding_rs = "0.8"
serde_json = { workspace = true }
serde = { workspace = true }
minijinja = { version = "2.20.0", features = ["loader"] }
regex = "1"

[dev-dependencies]
actix-web = "4"